--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ filelock==3.14.0
 fonttools==4.53.0
 fsspec==2024.6.0
 graphviz==0.20.3
+ImageHash==4.3.1
 Jinja2==3.1.4
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
@@ -27,6 +28,8 @@ packaging==24.0
 pillow==10.3.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+PyWavelets==1.6.0
+scipy==1.14.0
 six==1.16.0
 sympy==1.12.1
 torch==2.3.1
