--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,28 @@
-contourpy==1.2.1
-cycler==0.12.1
-filelock==3.14.0
-fonttools==4.53.0
-fsspec==2024.6.0
-graphviz==0.20.3
-ImageHash==4.3.1
-Jinja2==3.1.4
-kiwisolver==1.4.5
-MarkupSafe==2.1.5
-matplotlib==3.9.0
-mpmath==1.3.0
-networkx==3.3
-numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.5.40
-nvidia-nvtx-cu12==12.1.105
-packaging==24.0
-pillow==10.3.0
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-PyWavelets==1.6.0
-scipy==1.14.0
-six==1.16.0
-sympy==1.12.1
-torch==2.3.1
-torchaudio==2.3.1
-torchvision==0.18.1
-torchviz==0.0.2
-triton==2.3.1
-typing_extensions==4.12.2
+contourpy>=1.2,<2.0
+cycler>=0.12,<1.0
+filelock>=3.14,<4.0
+fonttools>=4.53,<5.0
+fsspec>=2024.6,<2025.0
+graphviz>=0.19,<1.0
+ImageHash>=4.3,<5.0
+Jinja2>=3.1,<4.0
+kiwisolver>=1.4,<2.0
+MarkupSafe>=2.1,<3.0
+matplotlib>=3.8,<4.0
+mpmath>=1.3,<2.0
+networkx>=3.3,<4.0
+numpy>=1.26,<2.0
+packaging>=24.0,<25.0
+pillow>=10.0,<11.0
+pyparsing>=3.1,<4.0
+python-dateutil>=2.9,<3.0
+PyWavelets>=1.6,<2.0
+scipy>=1.13,<2.0
+six>=1.16,<2.0
+sympy>=1.12,<2.0
+torch>=2.0,<3.0
+torchaudio>=2.0,<3.0
+torchvision>=0.15,<1.0
+torchviz>=0.0.2,<0.1
+triton>=2.0,<3.0
+typing_extensions>=4.12,<5.0
